--- a/resources/scss/components/_footer.scss
+++ b/resources/scss/components/_footer.scss
@@ -106,6 +106,11 @@
                         }
                     }
 
+                    small {
+                        color: red;
+                        margin: 5px 0 0;
+                    }
+
                     p {
                         font-size: 0.9em;
                     }
