--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
+@-webkit-keyframes splide-loading{0%{transform:rotate(0)}to{transform:rotate(1turn)}}@keyframes splide-loading{0%{transform:rotate(0)}to{transform:rotate(1turn)}}.splide__container{position:relative;box-sizing:border-box}.splide__list{margin:0!important;padding:0!important;width:-webkit-max-content;width:-moz-max-content;width:max-content;will-change:transform}.splide.is-active .splide__list{display:flex}.splide__pagination{display:inline-flex;align-items:center;width:95%;flex-wrap:wrap;justify-content:center;margin:0}.splide__pagination li{list-style-type:none;display:inline-block;line-height:1;margin:0}.splide{visibility:hidden}.splide,.splide__slide{position:relative;outline:none}.splide__slide{box-sizing:border-box;list-style-type:none!important;margin:0;flex-shrink:0}.splide__slide img{vertical-align:bottom}.splide__slider{position:relative}.splide__spinner{position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;display:inline-block;width:20px;height:20px;border-radius:50%;border:2px solid #999;border-left-color:transparent;-webkit-animation:splide-loading 1s linear infinite;animation:splide-loading 1s linear infinite}.splide__track{position:relative;z-index:0;overflow:hidden}.splide--draggable>.splide__track>.splide__list>.splide__slide{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.splide--fade>.splide__track>.splide__list{display:block}.splide--fade>.splide__track>.splide__list>.splide__slide{position:absolute;top:0;left:0;z-index:0;opacity:0}.splide--fade>.splide__track>.splide__list>.splide__slide.is-active{position:relative;z-index:1;opacity:1}.splide--rtl{direction:rtl}.splide--ttb>.splide__track>.splide__list{display:block}.splide--ttb>.splide__pagination{width:auto}.splide__arrow{position:absolute;z-index:1;top:50%;transform:translateY(-50%);width:2em;height:2em;border-radius:50%;display:flex;align-items:center;justify-content:center;border:none;padding:0;opacity:.7;background:#ccc}.splide__arrow svg{width:1.2em;height:1.2em}.splide__arrow:hover{cursor:pointer;opacity:.9}.splide__arrow:focus{outline:none}.splide__arrow--prev{left:1em}.splide__arrow--prev svg{transform:scaleX(-1)}.splide__arrow--next{right:1em}.splide__pagination{position:absolute;z-index:1;bottom:.5em;left:50%;transform:translateX(-50%);padding:0}.splide__pagination__page{display:inline-block;width:8px;height:8px;background:#ccc;border-radius:50%;margin:3px;padding:0;transition:transform .2s linear;border:none;opacity:.7}.splide__pagination__page.is-active{transform:scale(1.4);background:#fff}.splide__pagination__page:hover{cursor:pointer;opacity:.9}.splide__pagination__page:focus{outline:none}.splide__progress__bar{width:0;height:3px;background:#ccc}.splide--nav>.splide__track>.splide__list>.splide__slide{border:3px solid transparent}.splide--nav>.splide__track>.splide__list>.splide__slide.is-active{border-color:#000}.splide--nav>.splide__track>.splide__list>.splide__slide:focus{outline:none}.splide--rtl>.splide__arrows .splide__arrow--prev,.splide--rtl>.splide__track>.splide__arrows .splide__arrow--prev{right:1em;left:auto}.splide--rtl>.splide__arrows .splide__arrow--prev svg,.splide--rtl>.splide__track>.splide__arrows .splide__arrow--prev svg{transform:scaleX(1)}.splide--rtl>.splide__arrows .splide__arrow--next,.splide--rtl>.splide__track>.splide__arrows .splide__arrow--next{left:1em;right:auto}.splide--rtl>.splide__arrows .splide__arrow--next svg,.splide--rtl>.splide__track>.splide__arrows .splide__arrow--next svg{transform:scaleX(-1)}.splide--ttb>.splide__arrows .splide__arrow,.splide--ttb>.splide__track>.splide__arrows .splide__arrow{left:50%;transform:translate(-50%)}.splide--ttb>.splide__arrows .splide__arrow--prev,.splide--ttb>.splide__track>.splide__arrows .splide__arrow--prev{top:1em}.splide--ttb>.splide__arrows .splide__arrow--prev svg,.splide--ttb>.splide__track>.splide__arrows .splide__arrow--prev svg{transform:rotate(-90deg)}.splide--ttb>.splide__arrows .splide__arrow--next,.splide--ttb>.splide__track>.splide__arrows .splide__arrow--next{top:auto;bottom:1em}.splide--ttb>.splide__arrows .splide__arrow--next svg,.splide--ttb>.splide__track>.splide__arrows .splide__arrow--next svg{transform:rotate(90deg)}.splide--ttb>.splide__pagination{display:flex;flex-direction:column;bottom:50%;left:auto;right:.5em;transform:translateY(50%)}
 * {
   box-sizing: border-box;
   list-style-type: none;
@@ -181,15 +182,10 @@ body {
   position: relative;
   background: linear-gradient(-18deg, #acdfe2, #e5f5f6 80%);
 }
-@media (max-width: 599px) {
-  .banner {
-    padding: 150px 0;
-  }
-}
 .banner-container {
   display: flex;
   align-items: center;
-  height: 95vh;
+  height: 100vh;
 }
 .banner-container-text {
   position: relative;
@@ -276,26 +272,38 @@ body {
   content: "";
   z-index: -1;
 }
-.banner .how-it-works {
-  position: absolute;
-  width: 100%;
-  bottom: 30px;
-  z-index: 1;
-}
-@media (min-width: 600px) and (max-width: 1199px) {
-  .banner .how-it-works {
-    bottom: 15px;
-  }
+
+.how-it-works {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 @media (max-width: 599px) {
-  .banner .how-it-works {
-    position: relative;
-    background: #6caaa8;
-    padding: 20px 0;
-    bottom: -150px;
+  .how-it-works {
+    width: 100%;
+    padding: 0 15px;
   }
 }
-.banner .how-it-works-container {
+@media (min-width: 600px) and (max-width: 1199px) {
+  .how-it-works {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1200px) {
+  .how-it-works {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+}
+.how-it-works-title h4 {
+  font-size: 1.4em;
+  margin-bottom: 20px;
+}
+.how-it-works-container {
   display: flex;
   margin: 0 auto;
   width: -webkit-max-content;
@@ -308,18 +316,18 @@ body {
   padding: 20px;
 }
 @media (min-width: 600px) and (max-width: 1199px) {
-  .banner .how-it-works-container {
+  .how-it-works-container {
     padding: 15px;
   }
 }
 @media (max-width: 599px) {
-  .banner .how-it-works-container {
+  .how-it-works-container {
     flex-direction: column;
     width: 70%;
     gap: 20px;
   }
 }
-.banner .how-it-works-container-item {
+.how-it-works-container-item {
   width: 160px;
   height: 90px;
   display: flex;
@@ -327,28 +335,28 @@ body {
   align-items: center;
   flex-direction: column;
 }
-.banner .how-it-works-container-item:not(:last-child) {
+.how-it-works-container-item:not(:last-child) {
   border-right: 1px solid #ededed;
 }
-.banner .how-it-works-container-item img {
+.how-it-works-container-item img {
   max-height: 55px;
 }
-.banner .how-it-works-container-item span {
+.how-it-works-container-item span {
   color: #2E2E2E;
   font-size: 0.9em;
 }
 @media (min-width: 600px) and (max-width: 1199px) {
-  .banner .how-it-works-container-item {
+  .how-it-works-container-item {
     width: 140px;
     height: 70px;
   }
 }
 @media (max-width: 599px) {
-  .banner .how-it-works-container-item {
+  .how-it-works-container-item {
     width: 100%;
     padding: 0 0 10px;
   }
-  .banner .how-it-works-container-item:not(:last-child) {
+  .how-it-works-container-item:not(:last-child) {
     border-right: 0;
     border-bottom: 1px solid #ededed;
   }
@@ -433,14 +441,6 @@ body {
   .why-us-container-boxes .boxes-item {
     height: 200px;
     width: 200px;
-  }
-}
-.why-us-container-boxes .boxes-item:first-child, .why-us-container-boxes .boxes-item:nth-child(3) {
-  margin-top: -25px;
-}
-@media (min-width: 600px) and (max-width: 1199px) {
-  .why-us-container-boxes .boxes-item:first-child, .why-us-container-boxes .boxes-item:nth-child(3) {
-    margin-top: 0;
   }
 }
 .why-us-container-boxes .boxes-item img {
@@ -1021,6 +1021,50 @@ body {
 }
 .blog-section-content .blog-aside-blocks .block-feed-posts li a span small {
   color: lightgray;
+}
+
+.parceiros {
+  padding-top: 40px !important;
+  padding-bottom: 40px !important;
+  text-align: center;
+}
+@media (max-width: 599px) {
+  .parceiros {
+    width: 100%;
+    padding: 0 15px;
+  }
+}
+@media (min-width: 600px) and (max-width: 1199px) {
+  .parceiros {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1200px) {
+  .parceiros {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+}
+.parceiros h2 {
+  margin: 0 0 20px;
+  color: #2E2E2E;
+  font-size: 2em;
+}
+.parceiros .splide__slide img {
+  border-radius: 10px;
+  width: 150px;
+  height: 75px;
+}
+@media (max-width: 599px) {
+  .parceiros .splide__slide img {
+    width: 100%;
+    height: 100%;
+  }
+}
+.parceiros .splide__arrow {
+  background: transparent;
 }
 
 .footer {
