--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .to-top {
@@ -187,6 +188,33 @@ body {
   align-items: center;
   height: 100vh;
 }
+.banner-container::before {
+  background: url("../storage/doctor.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  background-position: center bottom;
+  min-width: 25%;
+  width: 100%;
+  max-width: 35%;
+  min-height: 80%;
+  height: 100%;
+  max-height: 85%;
+  content: "";
+  right: 10%;
+  bottom: 0;
+}
+@media (min-width: 600px) and (max-width: 1199px) {
+  .banner-container::before {
+    right: -22%;
+    max-width: 65%;
+  }
+}
+@media (max-width: 599px) {
+  .banner-container::before {
+    display: none;
+  }
+}
 .banner-container-text {
   position: relative;
   z-index: 1;
@@ -224,11 +252,12 @@ body {
 @media (min-width: 600px) and (max-width: 1199px) {
   .banner-container-text h2 {
     font-size: 40px;
+    max-width: 80%;
   }
 }
 @media (min-width: 1200px) {
   .banner-container-text h2 {
-    max-width: 70%;
+    max-width: 60%;
     font-size: 60px;
   }
 }
@@ -237,6 +266,11 @@ body {
   color: #2E2E2E;
 }
 @media (min-width: 1200px) {
+  .banner-container-text p {
+    max-width: 60%;
+  }
+}
+@media (min-width: 600px) and (max-width: 1199px) {
   .banner-container-text p {
     max-width: 60%;
   }
