--- a/resources/scss/components/_banner.scss
+++ b/resources/scss/components/_banner.scss
@@ -11,6 +11,32 @@ $paddingBanner: 150px;
         align-items: center;
         height: 100vh;
 
+        &::before {
+            background: url('../storage/doctor.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            position: absolute;
+            background-position: center bottom;
+            min-width: 25%;
+            width: 100%;
+            max-width: 35%;
+            min-height: 80%;
+            height: 100%;
+            max-height: 85%;
+            content: '';
+            right: 10%;
+            bottom: 0;
+
+            @include tablet {
+                right: -22%;
+                max-width: 65%;
+            }
+
+            @include mobile-only {
+                display: none;
+            }
+        }
+
         &-text {
             @include container;
             position: relative;
@@ -30,10 +56,11 @@ $paddingBanner: 150px;
 
                 @include tablet {
                     font-size: 40px;
+                    max-width: 80%;
                 }
 
                 @include desktop {
-                    max-width: 70%;
+                    max-width: 60%;
                     font-size: 60px;
                 }
             }
@@ -43,6 +70,10 @@ $paddingBanner: 150px;
                 color: $text;
 
                 @include desktop {
+                    max-width: 60%;
+                }
+
+                @include tablet {
                     max-width: 60%;
                 }
             }
