--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
-@import url('~@splidejs/splide/dist/css/splide.min.css');
+@import url('../css/swiper-bundle.min.css');
 
 @import "./components/mixins";
 @import "./components/variables";
@@ -20,7 +20,6 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
 }
 
 .to-top {
@@ -39,6 +38,7 @@ body {
     opacity: 0;
     transition: all ease .4s;
     cursor: pointer;
+    z-index: 99;
 }
 
 @import "./components/navbar";
@@ -47,6 +47,7 @@ body {
 @import "./components/why-us";
 @import "./components/pet";
 @import "./components/blog";
+@import "./components/depoimentos";
 @import "./components/parceiros";
 @import "./components/footer";
 
@@ -194,4 +195,37 @@ body {
 
 .hidden {
     display: none;
+}
+
+.swiper {
+    &-container {
+        width: 100%;
+        height: 100%;
+    }
+
+    &-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+    }
 }
