--- a/resources/scss/components/_footer.scss
+++ b/resources/scss/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+    background-color: $text;
     background: linear-gradient(rgba(0, 0, 0, .6),
             rgba(0, 0, 0, .6)),
         url('../storage/footer-bg.jpeg');
