--- a/resources/scss/components/_parceiros.scss
+++ b/resources/scss/components/_parceiros.scss
@@ -9,4 +9,25 @@
         color: $text;
         font-size: 2em;
     }
+
+    &-slider {
+        .swiper {
+            &-slide {
+                img {
+                    height: 45px;
+                    width: 150px;
+                    object-fit: cover;
+                    transition: all .4s ease-in-out;
+                    filter: alpha(opacity=50) grayscale(1);
+                    opacity: 0.5;
+
+                    &:hover {
+                        zoom: 1;
+                        filter: alpha(opacity=100) grayscale(0);
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
 }
