--- a/resources/scss/components/_variables.scss
+++ b/resources/scss/components/_variables.scss
@@ -1,5 +1,4 @@
-$primary:#61C2C7;
-$secondary: #6caaa8;
+$primary:rgb(252, 207, 61);
 $bg: #F7F7F8;
-$text:#2E2E2E;
+$text:rgb(33, 33, 33);
 $gap: 15px;
