--- a/resources/scss/components/_why-us.scss
+++ b/resources/scss/components/_why-us.scss
@@ -88,7 +88,7 @@
                 }
 
                 span {
-                    color: $secondary;
+                    color: $primary;
                 }
 
                 p {
